--- a/my-project/package.json
+++ b/my-project/package.json
@@ -19,13 +19,13 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/node": "20.19.27",
+    "@types/react": "19.2.7",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.0",
     "tailwindcss": "^4.1.18",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
